Impl first pojo matrix api generator