@@ -17,7 +17,7 @@ dependencies {
 }
 
 tasks.register("generate", GenerateMatrixTask) {
-    outputDir = project.layout.buildDirectory.dir("generated/sources/matrices/java/main")
+    outputDir = project.layout.buildDirectory.dir("generated/sources/matrices/java/main/ch/szclsb/tjv")
     matrixPackage = "ch.szclsb.tjv"
     matrices {
         FMatrix2x2 {
@@ -40,6 +40,7 @@ java {
 }
 compileJava {
     dependsOn(generate)
+    options.compilerArgs += '--enable-preview'
 }
 
 sourceSets {
